Refactor integration test imports and remove unnecessary delays.